fix light dark modes

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,3 @@
   padding: 2rem;
   text-align: center;
 }
-
-.dark-theme {
-  background-color: #1B2430;
-  color: #F1F1F1;
-}
-
