--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: #333;
+  background-color: white;
   position: fixed;
   bottom: 0;
   left: 0;
@@ -10,3 +10,4 @@
   justify-content: center;
 
 }
+
