--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,6 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,6 +11,11 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+.dark-theme *{
+  background-color: #242424;
+}
+
 
 a {
   font-weight: bold;
@@ -32,6 +35,11 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #F1F1F1;
+}
+
+body.dark-theme {
+  background-color: #242424;
 }
 
 h1 {
@@ -39,12 +47,12 @@ h1 {
   line-height: 1.1;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
   }
   a:hover {
     color: #747bff;
-  }
+  } */
 }
